--- a/src/Style/Registro.css
+++ b/src/Style/Registro.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background: url('../assets/img/fondo.jpg') center/cover no-repeat;
+    background: url("../assets/img/fondo.jpg") center/cover no-repeat;
     background-attachment: fixed;
     height: 100vh;
     display: flex;
@@ -10,39 +10,49 @@ body {
     justify-content: center;
 }
 
-.login-container {
-    max-width: 400px;
-    background-color: rgba(255, 255, 255, 0.1);
+.register-container {
+    max-width: 600px;
     padding: 20px;
-    border-radius: 5px;
+    border-radius: 10px; /* Bordes más redondeados */
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
+    background-color: rgba(255, 255, 255, 0.1); /* Fondo más transparente */
 }
 
-.login-container img {
-    width: 100%;
+.register-container img {
+    width: 50%;
     margin-bottom: 20px;
 }
 
-.login-container label {
+.form-row {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 16px;
+}
+
+.form-col {
+    flex: 0 0 calc(33.333% - 10px);
+}
+
+.register-container label {
     display: block;
     margin-bottom: 8px;
     color: #333;
     font-weight: bold;
 }
 
-.login-container input {
+.register-container input {
     width: 100%;
     padding: 10px;
     margin-bottom: 16px;
     box-sizing: border-box;
     border: none;
-    border-bottom: 2px solid #3265ff; /* Línea inferior verde */
+    border-bottom: 2px solid #3265ff;
     background: transparent;
     outline: none;
 }
 
-.login-container button {
+.register-container button {
     background-color: #3265ff;
     color: #fff;
     padding: 12px;
@@ -50,20 +60,20 @@ body {
     border-radius: 3px;
     cursor: pointer;
     font-size: 16px;
-    transition: background-color 0.3s; /* Animación de cambio de color en 0.3 segundos */
+    transition: background-color 0.3s;
 }
 
-.login-container button:hover {
-    background-color: #3265ff; /* Nuevo color al pasar el cursor */
+.register-container button:hover {
+    background-color: #3265ff;
 }
 
-.signup-link {
+.login-link {
     margin-top: 15px;
     font-size: 14px;
     color: #555;
 }
 
-.signup-link a {
+.login-link a {
     color: #3265ff;
     text-decoration: none;
     font-weight: bold;
