--- a/Style/Productos.css
+++ b/Style/Productos.css
@@ -41,7 +41,6 @@
     color: #FFFFFF;
     text-shadow: 3px 3px 4px #000000;
     font: normal normal 900 18px/26px Lato;
-
 }
 .enlaces:hover{
     color: #93F2F5;
@@ -54,83 +53,42 @@
     flex-wrap: wrap;
     background-color: #FFFFFF;
 }
-.slogan{
-    width: 80%;
-    height: auto;
-    margin-top: 2%;
-    border-radius: 15px;
-}
-.consejosServicios{
+.producto{
     width: 80%;
     height: 50vh;
     margin-top: 2%;
     border-radius: 15px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.consejos{
-    width: 39%;
-    height: 90%;
-    border-radius: 15px;
-    background-color: #f2f2f2;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-}
-.consejosDiv{
-    width: 100%;
-    height: 10vh;
-    display: flex;
-    justify-content: space-around;
-}
-.servicios{
-    width: 59%;
-    height: 90%;
-    border-radius: 15px;
     background-color: #f2f2f2;
     display: flex;
     justify-content: space-around;
+    align-items: center;
     flex-wrap: wrap;
 }
-.serviciosDiv{
-    width: 20%;
-    height: auto;
+.cards{
+    width: 18%;
+    height: 70%;
+    border-radius: 10px;
+    box-shadow: 1px 1px 2px 1px #000000;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    text-align: center;
+    justify-content: space-around;
 }
-.Ubicacion{
-    width: 80%;
-    height: 50vh;
-    border-radius: 15px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.Direccion{
-    width: 39%;
-    height: 90%;
-    border-radius: 15px;
-    background-color: #f2f2f2;
-    display: flex;
-    flex-wrap: wrap;
-}
-.pDireccion{
+.imgCards{
     width: 100%;
-    margin-left: 20px;
+    height: 60%;
+    border-radius: 10px 10px 0px 0px;
 }
-.Mapa{
-    width: 59%;
-    height: 90%;
-    border-radius: 15px;
-    background-color: #f2f2f2;
-
+.pCards{
+    margin: 7px;
+}
+h3{
+    margin: 2%;
+    width: 100%;
 }
 footer{
     width: 100%;
     height: 20vh;
+    margin-top: 2%;
     background-color: #1D8B8F;
     display: flex;
     justify-content: space-between;
@@ -146,8 +104,4 @@ a{
     text-decoration: none;
     margin-left: 5px;
     color: #000000;
-}
-h3{
-    width: 100%;
-    margin: 5px;
 }
