--- a/Style/Nosotros.css
+++ b/Style/Nosotros.css
@@ -41,6 +41,7 @@
     color: #FFFFFF;
     text-shadow: 3px 3px 4px #000000;
     font: normal normal 900 18px/26px Lato;
+
 }
 .enlaces:hover{
     color: #93F2F5;
@@ -53,43 +54,60 @@
     flex-wrap: wrap;
     background-color: #FFFFFF;
 }
-.producto{
+.Trayectoria{
     width: 80%;
-    height: 50vh;
-    margin-top: 2%;
-    border-radius: 15px;
-    background-color: #f2f2f2;
+    height: 40vh;
+    background-color: #F2F2F2;
     display: flex;
     justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
+    border-radius: 15px;
+    margin-top: 2%;
 }
-.cards{
-    width: 18%;
-    height: 70%;
+.listaTrayectoria{
+    width: 40%;
+    height: 80%;
     border-radius: 10px;
-    box-shadow: 1px 1px 2px 1px #000000;
+    margin-bottom: 10px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
-.imgCards{
-    width: 100%;
-    height: 60%;
-    padding: 0;
-    border-radius: 10px 10px 0px 0px;
+li{
+    margin: 25px;
 }
-.pCards{
-    margin: 3px;
-    font: normal normal 900 15px/15px Lato;
+h2{
+    margin: 10px;
 }
-.pDescripcion{
-    font: normal normal 500 10px/15px Lato;
-    margin: 2px;
+.Personal{
+    width: 80%;
+    height: 50vh;
+    background-color: #F2F2F2;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    border-radius: 15px;
+    margin-top: 2%;
+}
+.cardsPersonal{
+    width: 20%;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+}
+.Perfil{
+    width: 70%;
+    border-radius: 50%;
+    margin: 3%;
+    margin-bottom: 5%;
 }
 h3{
-    margin: 2%;
-    width: 100%;
+    margin-bottom: 3%;
 }
 footer{
     width: 100%;
