--- a/Style/Adopcion.css
+++ b/Style/Adopcion.css
@@ -59,60 +59,33 @@
     flex-wrap: wrap;
     background-color: #FFFFFF;
 }
-.Trayectoria{
+.Adopcion{
     width: 80%;
-    height: 40vh;
-    background-color: #F2F2F2;
+    height: 155vh;
+    margin-top: 2%;
+    border-radius: 15px;
+    background-color: #f2f2f2;
     display: flex;
     justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
-    border-radius: 15px;
-    margin-top: 2%;
 }
-.listaTrayectoria{
-    width: 40%;
-    height: 80%;
+.CardAdopcion{
+    width: 23%;
+    height: 45vh;
+    margin: 2% 5% 1% 5%;
     border-radius: 10px;
-    margin-bottom: 10px;
+    box-shadow: 1px 1px 2px 1px #000000;
     display: flex;
-    flex-direction: column;
     justify-content: space-between;
-}
-li{
-    margin: 25px;
-}
-h2{
-    margin: 10px;
-}
-.Personal{
-    width: 80%;
-    height: 50vh;
-    background-color: #F2F2F2;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-wrap: wrap;
-    border-radius: 15px;
-    margin-top: 2%;
-}
-.cardsPersonal{
-    width: 20%;
-    height: 80%;
-    display: flex;
-    flex-direction: column;
     align-items: center;
     text-align: center;
-    justify-content: center;
+    flex-direction: column;
 }
-.Perfil{
-    width: 70%;
-    border-radius: 50%;
-    margin: 3%;
-    margin-bottom: 5%;
-}
-h3{
-    margin-bottom: 3%;
+.CardImg{
+    width: 100%;
+    height: 50%;
+    border-radius: 10px 10px 0px 0px;
 }
 footer{
     width: 100%;
