--- a/Style/Index.css
+++ b/Style/Index.css
@@ -10,8 +10,7 @@
     height: 20vh;
     background-color: #1D8B8F;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    justify-content: center;
 }
 .LogoDiv{
     width: 20%;
@@ -19,7 +18,6 @@
     display: flex;
     flex-wrap: nowrap;
     align-items: center;
-    margin-left: 30px;
 }
 
 .tituloHeader{
@@ -45,6 +43,12 @@
 }
 .enlaces:hover{
     color: #93F2F5;
+}
+.Alinear{
+    width: 80%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 .body{
     width: 100%;
@@ -133,7 +137,7 @@ footer{
     height: 20vh;
     background-color: #1D8B8F;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
 }
 li{
