--- a/Style/Productos.css
+++ b/Style/Productos.css
@@ -10,6 +10,12 @@
     height: 20vh;
     background-color: #1D8B8F;
     display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.Alinear{
+    width: 80%;
+    display: flex;
     justify-content: space-between;
     align-items: center;
 }
@@ -19,7 +25,6 @@
     display: flex;
     flex-wrap: nowrap;
     align-items: center;
-    margin-left: 30px;
 }
 
 .tituloHeader{
@@ -97,7 +102,7 @@ footer{
     margin-top: 2%;
     background-color: #1D8B8F;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
 }
 li{
