--- a/Style/Productos.css
+++ b/Style/Productos.css
@@ -60,10 +60,10 @@
 }
 .producto{
     width: 80%;
-    height: 50vh;
     margin-top: 2%;
     border-radius: 15px;
     background-color: #f2f2f2;
+    padding: 10px;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -73,7 +73,8 @@
     width: 18%;
     height: 70%;
     border-radius: 10px;
-    box-shadow: 1px 1px 2px 1px #000000;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    padding:10px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
