--- a/Style/Adopcion.css
+++ b/Style/Adopcion.css
@@ -14,7 +14,7 @@
 
         .header{
             width: 100%;
-            height: 20vh;
+            height: 10vh;
             background-color: #1D8B8F;
             display: flex;
             justify-content: center;
@@ -82,10 +82,19 @@
             width: 18%;
             height: 70%;
             border-radius: 10px;
-            box-shadow: 1px 1px 2px 1px #000000;
+            box-shadow: 0 1px 3px rgba(0,0,0,0.4), 0 1px 2px rgba(0,0,0,0.24);
             display: flex;
             flex-direction: column;
             justify-content: space-between;
+        }
+        .texCards{
+            width: 90%;
+            height: 30%;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            padding:7px;
+            margin-bottom: 3%;
         }
         .imgCards{
             width: 100%;
@@ -107,12 +116,15 @@
         }
         footer{
             width: 100%;
-            height: 20vh;
+            height: 10vh;
             margin-top: 2%;
             background-color: #1D8B8F;
             display: flex;
             justify-content: center;
             align-items: center;
+        }
+        ul{
+            display: flex;
         }
         li{
             margin: 15px;
