--- a/Style/Index.css
+++ b/Style/Index.css
@@ -7,7 +7,7 @@
 
 .header{
     width: 100%;
-    height: 20vh;
+    height: 10vh;
     background-color: #1D8B8F;
     display: flex;
     justify-content: center;
@@ -133,11 +133,14 @@
 }
 footer{
     width: 100%;
-    height: 20vh;
+    height: 10vh;
     background-color: #1D8B8F;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+ul{
+    display: flex;
 }
 li{
     margin: 15px;
