--- a/Style/Nosotros.css
+++ b/Style/Nosotros.css
@@ -7,7 +7,7 @@
 
 .header{
     width: 100%;
-    height: 20vh;
+    height: 10vh;
     background-color: #1D8B8F;
     display: flex;
     justify-content: center;
@@ -116,12 +116,15 @@ h3{
 }
 footer{
     width: 100%;
-    height: 20vh;
+    height: 10vh;
     margin-top: 2%;
     background-color: #1D8B8F;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+.ul{
+    display: flex;
 }
 li{
     margin: 15px;
