--- a/Style/Productos.css
+++ b/Style/Productos.css
@@ -7,7 +7,7 @@
 
 .header{
     width: 100%;
-    height: 20vh;
+    height: 10vh;
     background-color: #1D8B8F;
     display: flex;
     justify-content: center;
@@ -73,16 +73,22 @@
     width: 18%;
     height: 70%;
     border-radius: 10px;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    padding:10px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.4), 0 1px 2px rgba(0,0,0,0.24);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
+.texCards{
+    height: 30%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding:7px;
+    margin-bottom: 3%;
+}
 .imgCards{
     width: 100%;
     height: 60%;
-    padding: 0;
     border-radius: 10px 10px 0px 0px;
 }
 .pCards{
@@ -99,7 +105,7 @@ h3{
 }
 footer{
     width: 100%;
-    height: 20vh;
+    height: 10vh;
     margin-top: 2%;
     background-color: #1D8B8F;
     display: flex;
@@ -111,6 +117,9 @@ li{
     display: flex;
     align-items: center;
     text-decoration: none;
+}
+ul{
+    display: flex;
 }
 a{
     text-decoration: none;
