--- a/Style/Adopcion.css
+++ b/Style/Adopcion.css
@@ -1,127 +1,161 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Roboto:wght@500&display=swap');
 
-        *{
-            padding: 0;
-            margin: 0;
-        }
-        .Cuerpo{
-            width: 100%;
-            height: auto;
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-        }
+* {
+    padding: 0;
+    margin: 0;
+}
 
-        .header{
-            width: 100%;
-            height: 20vh;
-            background-color: #1D8B8F;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        .Alinear{
-            width: 80%;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-        .LogoDiv{
-            width: 20%;
-            height: 18vh;
-            display: flex;
-            flex-wrap: nowrap;
-            align-items: center;
-            margin-left: 30px;
-        }
+.Cuerpo {
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
 
-        .tituloHeader{
-            color: #FFFFFF;
-            text-shadow: 3px 3px 4px #1B9EDA;
-            font: normal normal 900 50px/58px Lato;
-        }
+.header {
+    width: 100%;
+    height: 20vh;
+    background-color: #1D8B8F;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
-        .Link{
-            width: 25%;
-            height: 18vh;
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-            margin-right: 30px;
-        }
-        .enlaces{
-            text-decoration: none;
-            color: #FFFFFF;
-            text-shadow: 3px 3px 4px #000000;
-            font: normal normal 900 18px/26px Lato;
-        }
-        .enlaces:hover{
-            color: #93F2F5;
-        }
-        .body{
-            width: 80%;
-            height: auto;
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-            background-color: #f2f2f2;
-            margin: 2%;
-            border-radius: 15px;
-        }
-        .producto{
-            width: 80%;
-            height: 50vh;
-            margin-top: 2%;
-            border-radius: 15px;
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-            flex-wrap: wrap;
-        }
-        .cards{
-            width: 18%;
-            height: 70%;
-            border-radius: 10px;
-            box-shadow: 1px 1px 2px 1px #000000;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-        }
-        .imgCards{
-            width: 100%;
-            height: 60%;
-            padding: 0;
-            border-radius: 10px 10px 0px 0px;
-        }
-        .pCards{
-            margin: 3px;
-            font: normal normal 900 15px/15px Lato;
-        }
-        .pDescripcion{
-            font: normal normal 500 10px/15px Lato;
-            margin: 2px;
-        }
-        h3{
-            margin: 2%;
-            width: 100%;
-        }
-        footer{
-            width: 100%;
-            height: 20vh;
-            margin-top: 2%;
-            background-color: #1D8B8F;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        li{
-            margin: 15px;
-            display: flex;
-            align-items: center;
-            text-decoration: none;
-        }
-        a{
-            text-decoration: none;
-            margin-left: 5px;
-            color: #000000;
-        }
+.Alinear {
+    width: 80%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.LogoDiv {
+    width: 20%;
+    height: 18vh;
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+    margin-left: 30px;
+}
+
+.tituloHeader {
+    color: #FFFFFF;
+    text-shadow: 3px 3px 4px #1B9EDA;
+    font: normal normal 900 50px/58px Lato;
+}
+
+.Link {
+    width: 25%;
+    height: 18vh;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-right: 30px;
+}
+
+.enlaces {
+    text-decoration: none;
+    color: #FFFFFF;
+    text-shadow: 3px 3px 4px #000000;
+    font: normal normal 900 18px/26px Lato;
+}
+
+.enlaces:hover {
+    color: #93F2F5;
+}
+
+.body {
+    width: 80%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    background-color: #ffffff;
+    margin: 2%;
+    border-radius: 15px;
+}
+
+.producto {
+    width: 100%;
+    height: auto;
+    margin-top: 2%;
+    border-radius: 15px;
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
+    flex-wrap: wrap;
+}
+
+
+h3 {
+    margin: 2%;
+    width: 100%;
+}
+
+footer {
+    width: 100%;
+    height: 20vh;
+    margin-top: 2%;
+    background-color: #1D8B8F;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+li {
+    margin: 15px;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+}
+
+a {
+    text-decoration: none;
+    margin-left: 5px;
+    color: #000000;
+}
+
+.card {
+    width: 18rem;
+    border: 1px solid #dee2e6;
+    border-radius: 0.25rem;
+    overflow: hidden;
+    margin: 20px;
+    background-color: #fff;
+    border-radius: 5%;
+    text-align: center;
+}
+
+.card img {
+    width: 100%;
+    height: 180px;
+    object-fit: cover;
+}
+
+.card-body {
+    padding: 1.25rem;
+}
+
+.card-title {
+    font-size: 1.25rem;
+    font-weight: bold;
+}
+
+.card-text {
+    color: #6c757d;
+}
+
+.btn-primary {
+    color: #fff;
+    background-color: #007bff;
+    border: 1px solid #007bff;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    border-radius: 0.25rem;
+    cursor: pointer;
+}
+
+.btn-primary:hover {
+    background-color: #0056b3;
+    border-color: #0056b3;
+}
