--- a/Style/Index.css
+++ b/Style/Index.css
@@ -8,7 +8,7 @@
 .header{
     width: 100%;
     height: 10vh;
-    background-color: #1D8B8F;
+    background-color: #28ced3bd;
     display: flex;
     justify-content: center;
 }
@@ -37,7 +37,7 @@
 .enlaces{
     text-decoration: none;
     color: #FFFFFF;
-    font: normal normal 900 18px/26px Lato;
+    font: normal normal 900 16px/26px Lato;
 
 }
 .enlaces:hover{
@@ -56,6 +56,10 @@
     justify-content: center;
     flex-wrap: wrap;
     background-color: #FFFFFF;
+    font-family: 'Lato', sans-serif;
+    color: #6c757d;
+
+
 }
 .slogan{
     width: 80%;
@@ -134,10 +138,12 @@
 footer{
     width: 100%;
     height: 10vh;
-    background-color: #1D8B8F;
+    background-color: #28ced3bd;
     display: flex;
     justify-content: center;
     align-items: center;
+    font-family: 'Lato', sans-serif;
+    color: #6c757d;
 }
 ul{
     display: flex;
